--- a/templates/home.html
+++ b/templates/home.html
@@ -3,18 +3,27 @@
 <div class="container">
   <div class="header row">
     <div class="col-12 header-content">
-      Welcome to the magnificent cocktail learning platform!
+      Learn Gin Rickey (...and some cocktail basics...) in 10 minutes!
+    </div>
+  </div>
+  <div class="homepage-button-row row">
+    <div class="col-4"></div>
+    <div class="col-4 homepage-button-div">
+      <button
+        type="button"
+        class="btn btn-outline-warning my-2 btn-lg"
+        id="home-page-btn"
+      >
+        Let's get started!
+      </button>
     </div>
   </div>
   <div class="welcome-container container">
-    <div class="welcome-row-small row">
-      <p>Learn Gin Rickey!</p>
-    </div>
     <div class="row">
       <div class="col-12 welcome-img-div">
         <img
-          src="https://media1.giphy.com/media/ktCzb8Rm8aoow/giphy.gif"
-          alt="welcome page the big lebowski gif"
+          src="https://www.arweave.net/chtuhgCwo0ebMerYVJobuVc39O0dR9y_gR4viTF-vWU?ext=gif"
+          alt="welcome page gin rickey gif"
           class="img-fluid"
         />
       </div>
