--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,10 +27,7 @@
 
     <title>Gin Rickey</title>
   </head>
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"
-  ></script>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" id="navbar-yellow">
       <div class="container">
@@ -66,7 +63,7 @@
           </div>
         </div>
         <div class="navbar-nav">
-          <a class="nav-link" href="/">Quiz</a>
+          <a class="nav-link" href="/quiz/1">Quiz</a>
         </div>
       </div>
     </nav>
