--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,13 +53,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/">Overview</a>
+            <a class="nav-link" href="/learn/1">Overview</a>
           </div>
           <div class="navbar-nav">
-            <a class="nav-link" href="/">Key Ingredients</a>
+            <a class="nav-link" href="/learn/2">Key Ingredients</a>
           </div>
           <div class="navbar-nav">
-            <a class="nav-link" href="/">Step by Step</a>
+            <a class="nav-link" href="/learn/7">Step by Step</a>
           </div>
         </div>
         <div class="navbar-nav">
