added prev button in learn.html and learn.js

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -15,7 +15,10 @@
     <div class="col-6" id="learn-media"></div>
   </div>
   <div class="row" id="learn-button-row">
-    <div class="col-4" id="learn-next-button"></div>
+    <div class="col-4">
+      <span id="learn-prev-button"></span>
+      <span id="learn-next-button"></span>
+    </div>
   </div>
 </div>
 
