added margin bottom to the prev and next buttons

--- a/static/main.css
+++ b/static/main.css
@@ -29,8 +29,8 @@
   font-size: x-large;
 }
 
-#learn-next-button {
-  margin-bottom: 20px;
+#learn-button-row {
+  margin-bottom: 30px;
 }
 
 .transition-button-div {
