added timestamping for learning pages

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -5,6 +5,7 @@
 ></script>
 <script>
   let learn_data = {{data|tojson}}
+  console.log(learn_data)
 </script>
 <div class="container">
   <div class="row" id="learn-title-row">
