--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -13,6 +13,8 @@
 <div id="quiz_quest"></div>
 <div id="overall_row"></div>
 <div id="quiz_responses"></div>
+<div id="drag_me"></div>
+<div id="drag_here"></div>
 <div id="quiz_image"></div>
 <div id="next_button"></div>
 {% endblock %}
