adjusted homepage based on visual tools and made learning images smaller

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,11 @@
 ></script>
 <div class="container">
   <div class="header row">
-    <div class="col-12 header-content">
-      Learn Gin Rickey (...and some cocktail basics...) in 10 minutes!
+    <div class="col-12 header-content">Learn Gin Rickey Recipe</div>
+  </div>
+  <div class="header row">
+    <div class="col-12 header-subcontent">
+      (...and some cocktail basics) in 10 minutes!
     </div>
   </div>
   <div class="homepage-button-row row">
@@ -27,7 +30,7 @@
         <img
           src="https://www.arweave.net/chtuhgCwo0ebMerYVJobuVc39O0dR9y_gR4viTF-vWU?ext=gif"
           alt="welcome page gin rickey gif"
-          class="img-fluid"
+          class="img-fluid header-img-1"
         />
       </div>
     </div>
