--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
     />
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}" />
 
-    <title>Gin Rickey</title>
+    <title>Learn Gin Rickey</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
             alt="navbar beer icon"
           />
         </a>
-        <a class="navbar-brand" href="/">Make Gin Rickey</a>
+        <a class="navbar-brand" href="/">Learn Gin Rickey</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -56,7 +56,7 @@
             <a class="nav-link" href="/learn/1">Overview</a>
           </div>
           <div class="navbar-nav">
-            <a class="nav-link" href="/learn/2">Key Ingredients</a>
+            <a class="nav-link" href="/ingredientsoverview">Key Ingredients</a>
           </div>
           <div class="navbar-nav">
             <a class="nav-link" href="/learn/8">Step by Step</a>
