--- a/static/main.css
+++ b/static/main.css
@@ -68,10 +68,17 @@ img {
 
 #quiz_quest {
   text-align: left;
-  font-weight: bolder;
   font-size: larger;
   padding-bottom: 20px;
 }
 ul.bulletpoints {
   list-style-type: square;
+}
+
+#drag_here {
+  text-align: center;
+  font-weight: bolder;
+  font-size: larger;
+  width: 100%;
+  height: 100px;
 }
