modified homepage to look nice based on wednesday lecture

--- a/static/main.css
+++ b/static/main.css
@@ -35,6 +35,11 @@
   text-align: center;
 }
 
+.homepage-button-img {
+  height: 100px;
+  width: auto;
+}
+
 #header-content {
   margin-top: 10px;
   margin-bottom: 10px;
