--- a/templates/home.html
+++ b/templates/home.html
@@ -13,28 +13,51 @@
     </div>
   </div>
   <div class="homepage-button-row row">
-    <div class="col-4"></div>
-    <div class="col-4 homepage-button-div">
+    <div class="col-3"></div>
+    <div class="col-3 homepage-button-div">
       <button
         type="button"
         class="btn btn-outline-warning my-2 btn-lg"
         id="home-page-btn"
       >
-        Let's get started!
+        Start learning!
+        <div>
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/227/227345.png"
+            alt="homepage learning button image"
+            class="homepage-button-img"
+          />
+        </div>
       </button>
     </div>
-  </div>
-  <div class="welcome-container container">
-    <div class="row">
-      <div class="col-12 welcome-img-div">
-        <img
-          src="https://www.arweave.net/chtuhgCwo0ebMerYVJobuVc39O0dR9y_gR4viTF-vWU?ext=gif"
-          alt="welcome page gin rickey gif"
-          class="img-fluid header-img-1"
-        />
+    <div class="col-3 homepage-button-div">
+      <button
+        type="button"
+        class="btn btn-outline-warning my-2 btn-lg"
+        id="home-page-quiz-btn"
+      >
+        Quiz me!
+        <div>
+          <img
+            src="https://icons.veryicon.com/png/o/business/education-service/material-formulation.png"
+            alt="homepage learning button image"
+            class="homepage-button-img"
+          />
+        </div>
+      </button>
+    </div>
+    <div class="welcome-container container">
+      <div class="row">
+        <div class="col-12 welcome-img-div">
+          <img
+            src="https://www.arweave.net/chtuhgCwo0ebMerYVJobuVc39O0dR9y_gR4viTF-vWU?ext=gif"
+            alt="welcome page gin rickey gif"
+            class="img-fluid header-img-1"
+          />
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-{% endblock %}
+  {% endblock %}
+</div>
