--- a/templates/learn.html
+++ b/templates/learn.html
@@ -9,7 +9,11 @@
 </script>
 <div class="container">
   <div class="row" id="learn-title-row">
-    <div class="col-12" id="header-content"></div>
+    <div class="col-6" id="header-content"></div>
+    <div class="col-6" id="learn-progress-bar">
+      <div class="progress-bar-text">Your Progress</div>
+      <div class="progress"></div>
+    </div>
   </div>
   <div class="row" id="learn-content-row">
     <div class="col-6" id="learn-content"></div>
