i dont like merging

--- a/templates/review.html
+++ b/templates/review.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %} {% block content %}
-<script
-></script>
-<div class="container">
-  Review page
-</div>
+<script></script>
+<div class="container">Review page</div>
 
 {% endblock %}
