worked on questions 6 and 7

--- a/static/main.css
+++ b/static/main.css
@@ -132,3 +132,11 @@ ul.bulletpoints {
   width: 100%;
   height: 100px;
 }
+/* .drag_able {
+  background-color: yellow;
+  padding: 30px;
+  text-align: center;
+  height: 50px;
+  width: 350px;
+  z-index: 1;
+} */
