--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -14,6 +14,19 @@
 <div id="overall_row"></div>
 <div id="quiz_responses"></div>
 <div id="drag_me"></div>
+<div class="row">
+  <div class="col-8">
+    <div id="draggable_questions"></div>
+  </div>
+  <div class="col-4">
+    <div id="droppable_spots">
+      <div id="first_row"></div>
+      <div id="second_row"></div>
+      <div id="third_row"></div>
+      <div id="fourth_row"></div>
+    </div>
+  </div>
+</div>
 <div id="drag_here"></div>
 <div id="quiz_image"></div>
 <div id="next_button"></div>
