--- a/templates/transition.html
+++ b/templates/transition.html
@@ -10,17 +10,15 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-4"></div>
-    <div class="col-4 transition-button-div">
+    <div class="col-6 transition-button-div">
       <button
         type="button"
         class="btn btn-outline-warning my-2 btn-lg"
-        id="transition-page-btn"
+        id="transition-page-btn-quiz"
       >
         Go to quiz!
       </button>
     </div>
-    <!--
     <div class="col-6 transition-button-div">
       <button
         type="button"
@@ -30,7 +28,6 @@
         Review!
       </button>
     </div>
-    -->
   </div>
   <div class="welcome-container container">
     <div class="row">
