--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="data:," />
+    <link rel="icon" type="image/x-icon" href="http://cdn.onlinewebfonts.com/svg/img_479643.png" />
 
     <!-- jquery -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
