added colors for incorrect/correct, started bolding text

--- a/static/main.css
+++ b/static/main.css
@@ -128,6 +128,12 @@ ul.bulletpoints {
   width:450px;
   height:120px;
 }
+#feedback-green{
+  color: green;
+}
+#feedback-red{
+  color:red;
+}
 #drag_here {
   text-align: center;
   font-weight: bolder;
