--- a/static/main.css
+++ b/static/main.css
@@ -124,18 +124,18 @@ img {
 ul.bulletpoints {
   list-style-type: square;
 }
-li{
+li {
   padding: 1em;
 }
-.review-tag{
-  width:450px;
-  height:120px;
+.review-tag {
+  width: 450px;
+  height: 120px;
 }
-#feedback-green{
+#feedback-green {
   color: green;
 }
-#feedback-red{
-  color:red;
+#feedback-red {
+  color: red;
 }
 #drag_here {
   text-align: center;
@@ -144,11 +144,31 @@ li{
   width: 100%;
   height: 100px;
 }
-/* .drag_able {
-  background-color: yellow;
-  padding: 30px;
+.drag_me {
+  border: rgb(238, 238, 39) solid 10px;
+  font-weight: bold;
+  padding: 15px;
+}
+#first_row {
+  border: rgb(238, 238, 39) solid 10px;
+  padding: 15px;
+}
+#second_row {
+  border: rgb(238, 238, 39) solid 10px;
+  padding: 15px;
+}
+#third_row {
+  border: rgb(238, 238, 39) solid 10px;
+  padding: 15px;
+}
+#fourth_row {
+  border: rgb(238, 238, 39) solid 10px;
+  padding: 15px;
+}
+#drag_here {
+  height: 200px;
+  width: 500px;
   text-align: center;
-  height: 50px;
-  width: 350px;
-  z-index: 1;
-} */
+  background-color: rgb(231, 243, 59);
+  border-radius: 50%;
+}
