--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 </div>
-<div id="drag_here"></div>
+<div id="drag_here" class="row justify-content-center"></div>
 <div id="quiz_image"></div>
 <div id="next_button"></div>
 {% endblock %}
