--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
       <div class="container">
         <a class="navbar-brand" href="/">
           <img
-            src="http://cdn.onlinewebfonts.com/svg/img_479643.png"
+            src="https://cdn.iconscout.com/icon/free/png-256/beer-39-109304.png"
             width="30"
             height="30"
             alt="navbar beer icon"
