removed key ingredients overview

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="https://cdn.iconscout.com/icon/free/png-256/beer-39-109304.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.iconscout.com/icon/free/png-256/beer-39-109304.png"
+    />
 
     <!-- jquery -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -56,7 +60,7 @@
             <a class="nav-link" href="/learn/1">Overview</a>
           </div>
           <div class="navbar-nav">
-            <a class="nav-link" href="/ingredientsoverview">Key Ingredients</a>
+            <a class="nav-link" href="/learn/3">Key Ingredients</a>
           </div>
           <div class="navbar-nav">
             <a class="nav-link" href="/learn/8">Step by Step</a>
