--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -9,8 +9,14 @@
   let correct = {{correct|tojson}}
 </script>
 <script></script>
-<div id="quiz_header"></div>
-<div id="quiz_quest"></div>
+<div class="row">
+  <div class="col-4"> </div>
+  <div class="col-4" id="quiz_header"></div>
+</div>
+<div class="row">
+  <div class="col-6" id="quiz_quest"></div>
+  <div class="col-6" id="quiz_correct"> </div>
+</div>
 <div id="overall_row"></div>
 <div id="quiz_responses"></div>
 <div id="drag_me"></div>
