adjusted progress bar text for clarity

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -11,7 +11,7 @@
   <div class="row" id="learn-title-row">
     <div class="col-6" id="header-content"></div>
     <div class="col-6" id="learn-progress-bar">
-      <div class="progress-bar-text">Your Progress</div>
+      <div class="progress-bar-text"></div>
       <div class="progress"></div>
     </div>
   </div>
