modified UI for correct messages for correct responses

--- a/static/main.css
+++ b/static/main.css
@@ -108,6 +108,11 @@ img {
 #quiz_responses {
   width: 500px;
 }
+
+#quiz_correct {
+  font-size: large;
+}
+
 .next_button {
   color: black;
   background-color: yellow;
