fixed quiz grading

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,6 +7,9 @@
   let question = {{quiz_question|tojson}}
   let responses = {{quiz_options|tojson}}
   let correct = {{correct|tojson}}
+  let correct_answers_6 = {{correct_answers_6|tojson}}
+  let correct_answers_7 = {{correct_answers_7|tojson}}
+  console.log(`This is the value of correct now : ${correct}`)
 </script>
 <script></script>
 <div class="row">
