quiz score resets upon reaching quiz_end page

--- a/templates/quizend.html
+++ b/templates/quizend.html
@@ -4,7 +4,7 @@
   src="{{url_for('static', filename='quizend.js')}}"
 ></script>
 <script>
-  let correct = {{correct|tojson}}
+  let old_score = {{old_score|tojson}}
 </script>
 <div class="container">
   <div class="header row">
