added svg icons to transition page buttons and adjusted their positions, added margin to review page buttons

--- a/static/main.css
+++ b/static/main.css
@@ -40,6 +40,11 @@
   width: auto;
 }
 
+.transition-button-img {
+  height: 100px;
+  width: auto;
+}
+
 #header-content {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -142,6 +147,8 @@ li {
 .review-tag {
   width: 450px;
   height: 120px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #feedback-green {
   color: green;
