--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,6 +67,7 @@
           </div>
         </div>
         <div class="navbar-nav">
+          <a class="nav-link" href="/review">Review</a>
           <a class="nav-link" href="/quiz/1">Quiz</a>
         </div>
       </div>
