--- a/templates/transition.html
+++ b/templates/transition.html
@@ -10,22 +10,37 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-6 transition-button-div">
+    <div class="col-3"></div>
+    <div class="col-3 transition-button-div">
       <button
         type="button"
         class="btn btn-outline-warning my-2 btn-lg"
         id="transition-page-btn-quiz"
       >
         Go to quiz!
+        <div>
+          <img
+            src="https://icons.veryicon.com/png/o/business/education-service/material-formulation.png"
+            alt="transition page quiz button image"
+            class="transition-button-img"
+          />
+        </div>
       </button>
     </div>
-    <div class="col-6 transition-button-div">
+    <div class="col-3 transition-button-div">
       <button
         type="button"
         class="btn btn-outline-warning my-2 btn-lg"
         id="transition-page-btn-review"
       >
         Review!
+        <div>
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/1903/1903162.png"
+            alt="transition page review button image"
+            class="transition-button-img"
+          />
+        </div>
       </button>
     </div>
   </div>
