standardized review page cards and images, plus increased the margins

--- a/static/main.css
+++ b/static/main.css
@@ -145,10 +145,10 @@ li {
   padding: 1em;
 }
 .review-tag {
-  width: 450px;
+  width: 500px;
   height: 120px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
 #feedback-green {
   color: green;
@@ -218,4 +218,13 @@ svg.transp {
 }
 .clickedButton-correct {
   border: 2px solid #198754; /*Bootstraps  success color */
+}
+.review-image-tag{
+  width: 120px;
+  height:100px;
+  float:left
+}
+
+.review-tag-text{
+  display: table-cell
 }
