attemtped to fix q6 but messed up q1-5

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -20,6 +20,8 @@
   <div class="col-6" id="quiz_quest"></div>
   <div class="col-6" id="quiz_correct"> </div>
 </div>
+<div class="row">
+<div class = "col-6">
 <div id="overall_row"></div>
 <div id="quiz_responses"></div>
 <div id="drag_me"></div>
@@ -36,9 +38,11 @@
     </div>
   </div>
 </div>
+</div>
+<div class = "col-6">
 <div class="row justify-content-center">
   <div class="col-12"><div id="drag_here"></div></div>
-  </div>
+  </div></div></div>
   <div id="quiz_image"></div>
   <div id="next_button"></div>
   {% endblock %}
